# place_rust_2022

./: Cargo.toml  README.md  shell.nix
src/: csv.rs  main.rs
