[package]
name = "place_rust_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
ggez = "0.7"
csscolorparser = "0.5.0"

[profile.dev]
opt-level = 2
